<resources>
    <string name="app_name">DBproject</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Services</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="books">Books</string>
    <string name="authors">Authors</string>
    <string name="services">Services</string>
    <string name="description_dummy">Description DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription DesctiDescription Descti</string>
    <string name="black_list">Black List</string>
    <string name="borrows">Borrows</string>
    <string name="returns">RETURN</string>
    <string name="url_root">http://10.5.0.135:8080/</string>
</resources>
