<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/services">
            <menu>
                <item
                    android:checked="true"
                    android:id="@+id/nav_books"
                    android:icon="@drawable/library_books"
                    android:title="@string/books" />
                <item
                    android:id="@+id/authors"
                    android:icon="@drawable/authors"
                    android:title="@string/authors" />
                <item
                    android:id="@+id/blackList"
                    android:title="@string/black_list"
                    android:icon="@drawable/balack_list"/>
                <item
                    android:id="@+id/borrows"
                    android:title="@string/borrows"
                    android:icon="@drawable/borrows"/>

            </menu>
        </item>
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
